--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ library(ggplot2)
 library(rstudioapi)
 
 # Register google key
-register_google(key=&#39;AIzaSyC7ERZzBSNgG4lMuZBQMsAkjdim6lSw2T0&#39;)</code></pre>
+register_google()</code></pre>
 <p>Let’s create a map of the checkout locations now!</p>
 <pre class="r"><code># Load base map
 checkout_map &lt;- ggmap(get_googlemap(center = c(lon=-97.73769, lat=30.28624), zoom=13)) +
